--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 
+    <!-- JQUERY 3.6.0  https://code.jquery.com/ -->
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"
+    ></script>
+
     <!-- BOOTSTRAP 5  https://getbootstrap.com/docs/5.0/getting-started/introduction/-->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
@@ -28,6 +32,10 @@
       type="module"
       src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.0.0-beta.36/dist/shoelace.js"
     ></script>
+
+    <!-- FONT AWESOME -->
+    <script src="https://kit.fontawesome.com/ecc1ee22a2.js" crossorigin="anonymous"></script>
+    <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" /> -->
 
     <!-- YOUR CUSTOM CODE -->
     <link rel="stylesheet" href="css/style.css" />
