--- a/index.html
+++ b/index.html
@@ -43,6 +43,45 @@
     <script src="js/app.js" defer></script>
   </head>
   <body>
-    <template-example></template-example>
+    <header>
+      <div id="logo"></div>
+      <div id="nav">
+        <ul id="nav-bar">
+          <li class="nav"></li>
+          <li class="nav"></li>
+          <li class="nav"></li>
+          <li class="nav"></li>
+        </ul>
+        <div id="nav-menu"></div>
+      </div>
+    </header>
+    <main>
+      <div id="banner">
+        <h1 id="name"></h1>
+        <p id="my-title"></p>
+      </div>
+      <div class="about">
+        <ul id="about">
+          <li class="title" id="about-title"></li>
+          <li id="my-pic"></li>
+          <li id="skill"></li>
+          <li id="skill-text"></li>
+          <li id="about-text"></li>
+        </ul>
+      </div>
+      <div id="projects">
+        <div class="title" id="projects-title"></div>
+        <ul id="project-cards"></ul>
+      </div>
+      <div id="contact">
+        <div class="title" id="contact-title"></div>
+        <div id="my-email"></div>
+        <div id="form"></div>
+      </div>
+    </main>
+    <footer>
+      <div id="footer-name"></div>
+      <div id="contact-icons"></div>
+    </footer>
   </body>
 </html>
