html outline updated with some text

--- a/index.html
+++ b/index.html
@@ -44,43 +44,56 @@
   </head>
   <body>
     <header>
-      <div id="logo"></div>
+      <div id="logo">
+        <h1>CHT</h1>
+      </div>
       <div id="nav">
         <ul id="nav-bar">
-          <li class="nav"></li>
-          <li class="nav"></li>
-          <li class="nav"></li>
-          <li class="nav"></li>
+          <li class="nav">
+            <a href="">Home</a>
+          </li>
+          <li class="nav">
+            <a href="">About</a>
+          </li>
+          <li class="nav">
+            <a href="">Projects</a>
+          </li>
+          <li class="nav">
+            <a href="">Contact</a>
+          </li>
         </ul>
         <div id="nav-menu"></div>
       </div>
     </header>
     <main>
       <div id="banner">
-        <h1 id="name"></h1>
-        <p id="my-title"></p>
+        <h1 id="my-name">Chun Hin D. Tang</h1>
+        <p id="my-title">Software Developer</p>
       </div>
       <div class="about">
-        <ul id="about">
-          <li class="title" id="about-title"></li>
-          <li id="my-pic"></li>
-          <li id="skill"></li>
-          <li id="skill-text"></li>
-          <li id="about-text"></li>
-        </ul>
+        <h2 class="title" id="about-title">About</h2>
+        <img src="" alt="Picture of Chun Hin Tang" id="my-pic">
+        <h4 id="skill">Skill</h4>
+        <ul id="skill-text"></ul>
+        <p id="about-text"></p>
       </div>
       <div id="projects">
-        <div class="title" id="projects-title"></div>
+        <h2 class="title" id="projects-title">Projects</h2>
         <ul id="project-cards"></ul>
       </div>
       <div id="contact">
-        <div class="title" id="contact-title"></div>
+        <h2 class="title" id="contact-title">Contact</h2>
         <div id="my-email"></div>
-        <div id="form"></div>
+        <form>
+          <input type="text" name="name" placeholder="name" class="name">
+          <input type="email" name="email" placeholder="email" class="email">
+          <input type="text" name="message" placeholder="message" class="message">
+          <input type="submit"  value="Submit" class="submit">
+        </form>
       </div>
     </main>
     <footer>
-      <div id="footer-name"></div>
+      <div id="footer-name">Chun Hin D. Tang</div>
       <div id="contact-icons"></div>
     </footer>
   </body>
