--- a/index.html
+++ b/index.html
@@ -7,19 +7,34 @@
     <title>Document</title>
 
     <!-- JQUERY 3.6.0  https://code.jquery.com/ -->
-    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.js"
+      integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+      crossorigin="anonymous"
     ></script>
 
-    <!-- BOOTSTRAP 5  https://getbootstrap.com/docs/5.0/getting-started/introduction/-->
+    <!-- BOOTSTRAP CSS - version 4.5.3 -->
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+      integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
       crossorigin="anonymous"
     />
+
+    <!-- Bootstrap JS - version 4.5.3 -->
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
+      integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
       crossorigin="anonymous"
     ></script>
 
@@ -34,7 +49,10 @@
     ></script>
 
     <!-- FONT AWESOME -->
-    <script src="https://kit.fontawesome.com/ecc1ee22a2.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/ecc1ee22a2.js"
+      crossorigin="anonymous"
+    ></script>
     <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" /> -->
 
     <!-- YOUR CUSTOM CODE -->
@@ -42,39 +60,55 @@
     <script src="js/webcomponents.js" defer></script>
     <script src="js/app.js" defer></script>
   </head>
+
   <body>
     <header>
-      <div id="logo">
-        <h1>CHT</h1>
-      </div>
-      <div id="nav">
-        <ul id="nav-bar">
-          <li class="nav">
-            <a href="">Home</a>
-          </li>
-          <li class="nav">
-            <a href="">About</a>
-          </li>
-          <li class="nav">
-            <a href="">Projects</a>
-          </li>
-          <li class="nav">
-            <a href="">Contact</a>
-          </li>
-        </ul>
-        <div id="nav-menu"></div>
-      </div>
+      <nav
+        class="navbar fixed-top navbar-light"
+        style="background-color: #dcdcdc"
+      >
+        <h1 id="logo">CHT</h1>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link text-black text-center" href="#">Home</a>
+            <a class="nav-link text-black text-center" href="#">About</a>
+            <a class="nav-link text-black text-center" href="#">Projects</a>
+            <a class="nav-link text-black text-center" href="#">Contact</a>
+          </div>
+        </div>
+        <div class="navbar">
+          <a class="nav-link nav-element" href="#">Home</a>
+          <a class="nav-link nav-element" href="#">About</a>
+          <a class="nav-link nav-element" href="#">Projects</a>
+          <a class="nav-link nav-element" href="#">Contact</a>
+        </div>
+        </div>
+      </nav>
     </header>
+
+    <div class="header-space"></div>
+
     <main>
       <div id="banner">
-        <h1 id="my-name">Chun Hin D. Tang</h1>
-        <p id="my-title">Software Developer</p>
+        <h1 class="banner" id="my-name">Chun Hin D. Tang</h1>
+        <h4 class="banner" id="my-title">Software Developer</h4>
       </div>
       <div class="about">
         <h2 class="title" id="about-title">About</h2>
-        <img src="" alt="Picture of Chun Hin Tang" id="my-pic">
-        <h4 id="skill">Skill</h4>
-        <ul id="skill-text"></ul>
+        <img src="" alt="Picture of Chun Hin Tang" id="my-pic" />
+        <h4 id="skills">Skills</h4>
+        <ul id="skills-list"></ul>
         <p id="about-text"></p>
       </div>
       <div id="projects">
@@ -83,12 +117,17 @@
       </div>
       <div id="contact">
         <h2 class="title" id="contact-title">Contact</h2>
-        <div id="my-email"></div>
+        <div id="my-email">dtang955472@gmail.com</div>
         <form>
-          <input type="text" name="name" placeholder="name" class="name">
-          <input type="email" name="email" placeholder="email" class="email">
-          <input type="text" name="message" placeholder="message" class="message">
-          <input type="submit"  value="Submit" class="submit">
+          <input type="text" name="name" placeholder="name" class="name" />
+          <input type="email" name="email" placeholder="email" class="email" />
+          <input
+            type="text"
+            name="message"
+            placeholder="message"
+            class="message"
+          />
+          <input type="submit" value="Submit" class="submit" />
         </form>
       </div>
     </main>
