--- a/index.html
+++ b/index.html
@@ -65,11 +65,12 @@
     <header>
       <nav
         class="navbar fixed-top navbar-light"
-        style="background-color: #dcdcdc"
+        style="background-color: #dcdcdcda"
       >
         <h1 id="logo">CHT</h1>
         <button
           class="navbar-toggler"
+          style="border: solid darkslategrey"
           type="button"
           data-toggle="collapse"
           data-target="#navbarNavAltMarkup"
