About mobile html done for now

--- a/index.html
+++ b/index.html
@@ -105,29 +105,40 @@
         <h1 class="banner" id="my-name">Chun Hin D. Tang</h1>
         <h4 class="banner" id="my-title">Software Developer</h4>
       </div>
-      <div class="about">
+
+      <div id="about">
         <h2 class="title" id="about-title">About</h2>
-        <img src="" alt="Picture of Chun Hin Tang" id="my-pic" />
-        <h4 id="skills">Skills</h4>
-        <ul id="skills-list"></ul>
-        <p id="about-text"></p>
+        <div id="pic">
+          <img src="./Chun-Hin-pic.jpg" alt="Picture of Chun Hin Tang" id="my-pic"/>
+        </div>
+        <div id="skill-section">
+          <h4 id="skills">Skills</h4>
+          <ul id="skills-list">
+            <li class="skill">HTML</li>
+            <li class="skill">CSS</li>
+            <li class="skill">JAVASCRIPT</li>
+            <li class="skill">JQUERY</li>
+          </ul>
+        </div>
+        <div id="about-text">
+          <p>Hi, I'm Chun Hin and I'm a software developer based in Boston,MA.</p>
+          <p>I came from a patient care background and this helped me to develop a cool head under pressure and to be observant.  These two traits will go a long way in helping me to check my codes for mistakens and errors, allowing me to put most of my effort into developing the best product I can.</p>
+          <p id="extra">My patient care background also taught me to always put in my best effort and diligence in my work, for laziness and negiligence can result in patient injury or death.  These traits are perfect for my mindset while developing software.  I have to put in my best effort to complete my software development quickly while maintaining a high level of quality in this very competitive field.  Diligence is needed when tackling new, large or complicated projects.</p>
+        </div>
       </div>
+
       <div id="projects">
         <h2 class="title" id="projects-title">Projects</h2>
         <ul id="project-cards"></ul>
       </div>
+
       <div id="contact">
         <h2 class="title" id="contact-title">Contact</h2>
         <div id="my-email">dtang955472@gmail.com</div>
         <form>
           <input type="text" name="name" placeholder="name" class="name" />
           <input type="email" name="email" placeholder="email" class="email" />
-          <input
-            type="text"
-            name="message"
-            placeholder="message"
-            class="message"
-          />
+          <input type="text" name="message" placeholder="message" class="message"/>
           <input type="submit" value="Submit" class="submit" />
         </form>
       </div>
