--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <h2 class="title" id="about-title">About</h2>
         <div class="grid">
           <div id="pic">
-            <img src="./Chun-Hin-pic.jpg" alt="Picture of Chun Hin Tang" id="my-pic"/>
+            <img src="./pics/Chun-Hin-pic.jpg" alt="Picture of Chun Hin Tang" id="my-pic"/>
           </div>
           <div id="skill-section">
             <h4 id="skills">Skills</h4>
