added some hover animation for my pic and changed some of the background colors for the page

--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
         <div class="grid">
           <div id="pic">
             <img src="./pics/Chun-Hin-pic.jpg" alt="Picture of Chun Hin Tang" id="my-pic"/>
+            <h2>Welcome</h2>
           </div>
           <div id="skill-section">
             <h4 id="skills">Skills</h4>
