First iteration of project cards done

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     />
 
     <!-- Bootstrap JS - version 4.5.3 -->
-    <script
+    <!-- <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
       crossorigin="anonymous"
-    ></script>
+    ></script> -->
     <script
       src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
       integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
@@ -103,7 +103,7 @@
     <main>
       <div id="banner">
         <h1 class="banner" id="my-name">Chun Hin D. Tang</h1>
-        <h4 class="banner" id="my-title">Software Developer</h4>
+        <h4 class="banner" id="my-title">Software Engineer</h4>
       </div>
 
       <div id="about">
@@ -133,7 +133,7 @@
 
       <div id="projects">
         <h2 class="title" id="projects-title">Projects</h2>
-        <ul id="project-cards"></ul>
+        <div id="project-cards"></div>
       </div>
 
       <div id="contact">
