contact section done

--- a/index.html
+++ b/index.html
@@ -138,11 +138,11 @@
 
       <div id="contact">
         <h2 class="title" id="contact-title">Contact</h2>
-        <div id="my-email">dtang955472@gmail.com</div>
+        <div id="my-email">{dtang955472@gmail.com}</div>
         <form>
           <input type="text" name="name" placeholder="name" class="name" />
           <input type="email" name="email" placeholder="email" class="email" />
-          <input type="text" name="message" placeholder="message" class="message"/>
+          <textarea placeholder="message" class="message"></textarea>
           <input type="submit" value="Submit" class="submit" />
         </form>
       </div>
