removed some empty lines from css

--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@
     <div class="header-space"></div>
 
     <main>
-      <div id="banner">
+      <section id="banner">
         <h1 class="banner" id="my-name">Chun Hin D. Tang</h1>
         <h4 class="banner" id="my-title">Software Engineer</h4>
-      </div>
+      </section>
 
-      <div id="about">
+      <section id="about">
         <h2 class="title" id="about-title">About</h2>
         <div class="grid">
           <div id="pic">
@@ -129,14 +129,14 @@
           </div>
         </div>  
 
-      </div>
+      </section>
 
-      <div id="projects">
+      <section id="projects">
         <h2 class="title" id="projects-title">Projects</h2>
         <div id="project-cards"></div>
-      </div>
+      </section>
 
-      <div id="contact">
+      <section id="contact">
         <h2 class="title" id="contact-title">Contact</h2>
         <div id="my-email">{dtang955472@gmail.com}</div>
         <form>
@@ -145,7 +145,7 @@
           <textarea placeholder="message" class="message"></textarea>
           <input type="submit" value="Submit" class="submit" />
         </form>
-      </div>
+      </section>
     </main>
     <footer>
       <div id="footer-name">Chun Hin D. Tang</div>
