--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
     ></script>
     <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" /> -->
 
+    <!-- GOOGLE FONTS -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
     <!-- YOUR CUSTOM CODE -->
     <link rel="stylesheet" href="css/style.css" />
     <script src="js/webcomponents.js" defer></script>
@@ -149,7 +153,10 @@
     </main>
     <footer>
       <div id="footer-name">Chun Hin D. Tang</div>
-      <div id="contact-icons"></div>
+      <div id="contact-icons">
+        <i class="fab fa-github-square fa-2x"></i>
+        <i class="fab fa-linkedin fa-2x"></i>
+      </div>
     </footer>
   </body>
 </html>
