--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
             </ul>
           </div>
           <div id="about-text">
-            <p>Hi, I'm Chun Hin and I'm a software developer based in Boston,MA.</p>
-            <p>I came from a patient care background and this helped me to develop a cool head under pressure and to be observant.  These two traits will go a long way in helping me to check my codes for mistakens and errors, allowing me to put most of my effort into developing the best product I can.</p>
+            <p>Hi, I'm Chun Hin and I'm a software developer based in Boston, MA.</p>
+            <p>I came from a patient care background and this helped me to develop a cool head under pressure and to be observant.  These two traits will go a long way in helping me to check my codes for mistakes and errors, allowing me to put most of my effort into developing the best product I can.</p>
             <p id="extra">My patient care background also taught me to always put in my best effort and diligence in my work, for laziness and negiligence can result in patient injury or death.  These traits are perfect for my mindset while developing software.  I have to put in my best effort to complete my software development quickly while maintaining a high level of quality in this very competitive field.  Diligence is needed when tackling new, large or complicated projects.</p>
           </div>
         </div>  
