added event listener to the submit input

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Chun Hin's Porfolio</title>
 
     <!-- JQUERY 3.6.0  https://code.jquery.com/ -->
     <script
@@ -147,7 +147,7 @@
           <input type="text" name="name" placeholder="name" class="name" />
           <input type="email" name="email" placeholder="email" class="email" />
           <textarea placeholder="message" class="message"></textarea>
-          <input type="submit" value="Submit" class="submit" />
+          <input type="submit" value="Submit" class="submit" data-container="body" data-toggle="popover" data-placement="top"/>
         </form>
       </section>
     </main>
