added some animations

--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
     ></script>
     <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" /> -->
 
+    <!-- ANIMATE.CSS -->
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+
     <!-- GOOGLE FONTS -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -106,8 +112,8 @@
 
     <main>
       <section id="banner">
-        <h1 class="banner" id="my-name">Chun Hin D. Tang</h1>
-        <h4 class="banner" id="my-title">Software Engineer</h4>
+        <h1 class="banner animate__animated animate__zoomIn" id="my-name">Chun Hin D. Tang</h1>
+        <h4 class="banner animate__animated animate__zoomIn" id="my-title">Software Engineer</h4>
       </section>
 
       <section id="about">
