added some animation to the project cards

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           </div>
           <div id="about-text">
             <p>Hi, I'm Chun Hin and I'm a software developer based in Boston, MA.</p>
-            <p>I came from a patient care background and this helped me to develop a cool head under pressure and a sharp eye for detail.  These two traits will go a long way in helping me to check my codes for mistakes and errors, allowing me to put most of my effort into developing the best product I can.</p>
+            <p>I came from a patient care background and this helped me to develop a cool head under pressure and a keen eye for detail.  These two traits will go a long way in helping me to check my codes for mistakes and errors, allowing me to put most of my effort into developing the best product I can.</p>
             <p id="extra">My patient care background also taught me to always put in my best effort and be diligent, for laziness and negiligence can result in patient's injury or death.  These traits are perfect for my mindset while developing software.  I have to put in my best effort to complete my software development quickly while maintaining a high level of quality in this very competitive field.  Being diligent is needed when tackling new, large or complicated projects.</p>
           </div>
         </div>  
