added my logo and a banner background image

--- a/index.html
+++ b/index.html
@@ -75,9 +75,10 @@
     <header>
       <nav
         class="navbar fixed-top navbar-light"
-        style="background-color: #dcdcdcda"
+        style="background-color: #dcdcdcef"
       >
-        <h1 id="logo">CHT</h1>
+        <!-- <h1 id="logo">CHT</h1> -->
+        <img src="./pics/my-logo.png" alt="my logo" id="logo">
         <button
           class="navbar-toggler"
           style="border: solid darkslategrey"
