added smooth scroll and linked the nav links to the proper section

--- a/index.html
+++ b/index.html
@@ -93,23 +93,23 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link text-black text-center" href="#">Home</a>
-            <a class="nav-link text-black text-center" href="#">About</a>
-            <a class="nav-link text-black text-center" href="#">Projects</a>
-            <a class="nav-link text-black text-center" href="#">Contact</a>
+            <a class="nav-link text-black text-center" href="#header-space">Home</a>
+            <a class="nav-link text-black text-center" href="#about">About</a>
+            <a class="nav-link text-black text-center" href="#projects">Projects</a>
+            <a class="nav-link text-black text-center" href="#contact">Contact</a>
           </div>
         </div>
         <div class="navbar">
-          <a class="nav-link nav-element" href="#">Home</a>
-          <a class="nav-link nav-element" href="#">About</a>
-          <a class="nav-link nav-element" href="#">Projects</a>
-          <a class="nav-link nav-element" href="#">Contact</a>
+          <a class="nav-link nav-element" href="#header-space">Home</a>
+          <a class="nav-link nav-element" href="#about">About</a>
+          <a class="nav-link nav-element" href="#projects">Projects</a>
+          <a class="nav-link nav-element" href="#contact">Contact</a>
         </div>
         </div>
       </nav>
     </header>
 
-    <div class="header-space"></div>
+    <div id="header-space"></div>
 
     <main>
       <section id="banner">
@@ -161,8 +161,12 @@
     <footer>
       <div id="footer-name">Chun Hin D. Tang</div>
       <div id="contact-icons">
-        <i class="fab fa-github-square fa-2x"></i>
-        <i class="fab fa-linkedin fa-2x"></i>
+        <a class="icon" href="https://github.com/dctang4" target='_blank' rel="noopener noreferrer">
+          <i class="fab fa-github-square fa-2x"></i>
+        </a>
+        <a class="icon" href="https://www.linkedin.com/in/chun-hin-d-tang" target="_blank" rel="noopener noreferrer">
+          <i class="fab fa-linkedin fa-2x"></i>
+        </a>
       </div>
     </footer>
   </body>
