about text change

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           <div id="about-text">
             <p>Hi, I'm Chun Hin and I'm a software developer based in Boston, MA.</p>
             <p>I come from a patient care background and this helped me to develop a cool head under pressure and a keen eye for detail.  These two traits will go hand in hand in catching any errors and mistakes in my code and allow me to focus on developing the best product.</p>
-            <p id="extra">My patient care background also taught me to always put in my best effort and be diligent, for laziness and negligence can result in patient's injury or death.  These traits are perfect for my mindset while developing software.  I put in my best effort to complete my software development quickly while maintaining a high level of quality in this very competitive field.  Diligence is necessary when tackling new, large or complicated projects.</p>
+            <p id="extra">My patient care background also taught me to always be dedicated and diligent, for laziness and negligence can result in patient's injury or death.  These traits will help my transition into software development.  I am dedicated in completing software development quickly while maintaining a high level of quality in this very competitive field.  I am diligent in tackling new, large or complicated projects.</p>
           </div>
         </div>  
 
