made some changes to improve performance and follow best practices

--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
     ></script>
 
     <!-- SHOELACE WEB COMPONENT LIBRARY https://shoelace.style/-->
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.0.0-beta.36/dist/themes/base.css"
     />
     <script
       type="module"
       src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.0.0-beta.36/dist/shoelace.js"
-    ></script>
+    ></script> -->
 
     <!-- FONT AWESOME -->
     <script
@@ -71,7 +71,7 @@
         class="navbar fixed-top navbar-light"
         style="background-color: #dcdcdcdc"
       >
-        <img src="./pics/my-logo.png" alt="my logo" id="logo">
+        <img src="https://res.cloudinary.com/dvxvez8mj/image/upload/c_scale,h_100/v1618546989/my-logo_gw6esm.png" alt="my logo" id="logo">
         <button
           class="navbar-toggler"
           style="border: solid darkslategrey"
@@ -114,7 +114,7 @@
         <h2 class="title" id="about-title">About</h2>
         <div class="grid">
           <div id="pic">
-            <img src="./pics/Chun-Hin-pic.jpg" alt="Picture of Chun Hin Tang" id="my-pic"/>
+            <img src="https://res.cloudinary.com/dvxvez8mj/image/upload/c_scale,h_515,w_429/v1618342861/Chun-Hin-pic_w5ysll.jpg" alt="Picture of Chun Hin Tang" id="my-pic"/>
             <h2>Welcome</h2>
           </div>
           <div id="skill-section">
@@ -154,10 +154,10 @@
     <footer>
       <div id="footer-name">Chun Hin D. Tang</div>
       <div id="contact-icons">
-        <a class="icon" href="https://github.com/dctang4" target='_blank' rel="noopener noreferrer">
+        <a class="icon" id="github" href="https://github.com/dctang4" target='_blank' rel="noopener noreferrer">
           <i class="fab fa-github-square fa-2x"></i>
         </a>
-        <a class="icon" href="https://www.linkedin.com/in/chun-hin-d-tang" target="_blank" rel="noopener noreferrer">
+        <a class="icon" id="linkedin" href="https://www.linkedin.com/in/chun-hin-d-tang" target="_blank" rel="noopener noreferrer">
           <i class="fab fa-linkedin fa-2x"></i>
         </a>
       </div>
