Nav bar update and some accessibility and SEO improvements

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chun Hin's Porfolio</title>
+    <meta name="description" content="Chun Hin's Portfolio App">
 
     <!-- JQUERY 3.6.0  https://code.jquery.com/ -->
     <script
@@ -92,13 +93,6 @@
             <a class="nav-link text-black text-center" href="#contact">Contact</a>
           </div>
         </div>
-        <div class="navbar">
-          <a class="nav-link nav-element" href="#header-space">Home</a>
-          <a class="nav-link nav-element" href="#about">About</a>
-          <a class="nav-link nav-element" href="#projects">Projects</a>
-          <a class="nav-link nav-element" href="#contact">Contact</a>
-        </div>
-        </div>
       </nav>
     </header>
 
@@ -107,7 +101,7 @@
     <main>
       <section id="banner">
         <h1 class="banner animate__animated animate__zoomIn" id="my-name">Chun Hin D. Tang</h1>
-        <h4 class="banner animate__animated animate__zoomIn" id="my-title">Software Engineer</h4>
+        <p class="banner animate__animated animate__zoomIn" id="my-title">Software Engineer</p>
       </section>
 
       <section id="about">
@@ -118,7 +112,7 @@
             <h2>Welcome</h2>
           </div>
           <div id="skill-section">
-            <h4 id="skills">Skills</h4>
+            <h3 id="skills">Skills</h3>
             <ul id="skills-list">
               <li class="skill">HTML</li>
               <li class="skill">CSS</li>
@@ -129,7 +123,7 @@
           <div id="about-text">
             <p>Hi, I'm Chun Hin and I'm a software developer based in Boston, MA.</p>
             <p>I come from a patient care background and this helped me to develop a cool head under pressure and a keen eye for detail.  These two traits will go hand in hand in catching any errors and mistakes in my code and allow me to focus on developing the best product.</p>
-            <p id="extra">My patient care background also taught me to always be dedicated and diligent, for laziness and negligence can result in patient's injury or death.  These traits will help my transition into software development.  I am dedicated in completing software development quickly while maintaining a high level of quality in this very competitive field.  I am diligent in tackling new, large or complicated projects.</p>
+            <p id="extra">My patient care background also taught me to always be dedicated and diligent, for laziness and negligence can result in patient's injury or death.  These traits will help my transition into software development.  I am dedicated in completing software development quickly while maintaining a high level of quality.  I am diligent in tackling new, large or complicated projects.</p>
           </div>
         </div>  
 
