edited css and removed unnecessary lines of codes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chun Hin's Porfolio</title>
-    <meta name="description" content="Chun Hin's Portfolio App">
+    <meta name="description" content="Chun Hin's Software Engineering Portfolio App">
 
     <!-- JQUERY 3.6.0  https://code.jquery.com/ -->
     <script
