single page application layout with option to show all

--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
         class="navbar fixed-top navbar-light"
         style="background-color: #dcdcdcdc"
       >
-        <img src="https://res.cloudinary.com/dvxvez8mj/image/upload/c_scale,h_100/v1618546989/my-logo_gw6esm.png" alt="my logo" id="logo">
+        <a class="displayAll" href="#">
+          <img src="https://res.cloudinary.com/dvxvez8mj/image/upload/c_scale,h_100/v1618546989/my-logo_gw6esm.png" alt="my logo" id="logo">
+        </a>
         <button
           class="navbar-toggler"
           style="border: solid darkslategrey"
@@ -87,10 +89,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link text-black text-center" href="#header-space">Home</a>
-            <a class="nav-link text-black text-center" href="#about">About</a>
-            <a class="nav-link text-black text-center" href="#projects">Projects</a>
-            <a class="nav-link text-black text-center" href="#contact">Contact</a>
+            <a class="nav-link text-black text-center home" href="#header-space">Home</a>
+            <a class="nav-link text-black text-center about" href="#about">About</a>
+            <a class="nav-link text-black text-center projects" href="#projects">Projects</a>
+            <a class="nav-link text-black text-center contact" href="#contact">Contact</a>
           </div>
         </div>
       </nav>
