adding skills and resume link

--- a/index.html
+++ b/index.html
@@ -116,14 +116,22 @@
             <ul id="skills-list">
               <li class="skill">HTML</li>
               <li class="skill">CSS</li>
-              <li class="skill">JAVASCRIPT</li>
-              <li class="skill">JQUERY</li>
+              <li class="skill">Javascript</li>
+              <li class="skill">Jquery</li>
+              <li class="skill">React</li>
+              <li class="skill">MongoDB</li>
+              <li class="skill">Ruby</li>
+              <li class="skill">Python</li>
+              <li class="skill">Django</li>
             </ul>
           </div>
           <div id="about-text">
             <p>Hi, I'm Chun Hin and I'm a software developer based in Boston, MA.</p>
             <p>I come from a patient care background and this helped me to develop a cool head under pressure and a keen eye for detail.  These two traits will go hand in hand in catching any errors and mistakes in my code and allow me to focus on developing the best product.</p>
             <p id="extra">My patient care background also taught me to always be dedicated and diligent, for laziness and negligence can result in patient's injury or death.  These traits will help my transition into software development.  I am dedicated in completing software development quickly while maintaining a high level of quality.  I am diligent in tackling new, large or complicated projects.</p>
+            <a id="resume-link" href="https://drive.google.com/file/d/1pBrm-JkPBevXbA3WZT3gziruKQ0Q5YHx/view?usp=sharing" alt="link to resume" target="_blank" rel="noopener noreferrer">
+              - Link to Resume
+            </a>
           </div>
         </div>  
 
