added link to resume in nav

--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
             <a class="nav-link text-black text-center" href="#about">About</a>
             <a class="nav-link text-black text-center" href="#projects">Projects</a>
             <a class="nav-link text-black text-center" href="#contact">Contact</a>
+            <a class="nav-link text-black text-center resume" href="https://drive.google.com/file/d/1pBrm-JkPBevXbA3WZT3gziruKQ0Q5YHx/view?usp=sharing" alt="link to resume" target="_blank" rel="noopener noreferrer">
+              Resume
+            </a>
           </div>
         </div>
       </nav>
