new db for projects

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <script src="js/webcomponents.js" defer></script>
     <script src="js/app.js" defer></script>
+    <script src="js/projectData.json" defer></script>
   </head>
 
   <body>
